parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     expression -> var EQUAL expression SEMICOLON
Rule 3     expression -> expression OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
Rule 4     var -> VARIABLE
Rule 5     expression -> var
Rule 6     expression -> PRINT LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
Rule 7     expression -> LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 8     expression -> MINUS expression
Rule 9     expression -> INTEGER
Rule 10    expression -> REAL
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> expression MINUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> expression NORMAL_DIVIDE expression
Rule 15    expression -> expression INTEGER_DIVIDE expression
Rule 16    expression -> expression MODULUS expression
Rule 17    expression -> expression EXPONENT expression
Rule 18    expression -> TRUE
Rule 19    expression -> FALSE
Rule 20    expression -> NEGATION expression
Rule 21    expression -> expression CONJUNCTION expression
Rule 22    expression -> expression DISJUNCTION expression
Rule 23    expression -> expression LESS_THAN expression
Rule 24    expression -> expression LESS_EQUAL expression
Rule 25    expression -> expression NOT_EQUAL expression
Rule 26    expression -> expression EQUAL_TO expression
Rule 27    expression -> expression GREATER_THAN expression
Rule 28    expression -> expression GREATER_EQUAL expression
Rule 29    comma_elements -> expression
Rule 30    comma_elements -> expression COMMA comma_elements
Rule 31    expression -> OPEN_INDEXING CLOSE_INDEXING
Rule 32    expression -> OPEN_INDEXING comma_elements CLOSE_INDEXING
Rule 33    expression -> STRING
Rule 34    expression -> LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
Rule 35    expression -> expression OPEN_INDEXING expression CLOSE_INDEXING
Rule 36    expression -> TUPLE_INDEXING expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
Rule 37    expression -> expression MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
Rule 38    expression -> expression MEMBERSHIP expression
Rule 39    expression -> expression CONS expression

Terminals, with rules where they appear

CLOSE_INDEXING       : 3 31 32 35 37
COMMA                : 30
CONJUNCTION          : 21
CONS                 : 39
DISJUNCTION          : 22
EQUAL                : 2 3
EQUAL_TO             : 26
EXPONENT             : 17
FALSE                : 19
GREATER_EQUAL        : 28
GREATER_THAN         : 27
INTEGER              : 9
INTEGER_DIVIDE       : 15
LEFT_PARENTHESIS     : 6 7 34 36
LESS_EQUAL           : 24
LESS_THAN            : 23
MEMBERSHIP           : 37 38
MINUS                : 8 12
MODULUS              : 16
NEGATION             : 20
NORMAL_DIVIDE        : 14
NOT_EQUAL            : 25
OPEN_INDEXING        : 3 31 32 35 37
PLUS                 : 11
PRINT                : 6
REAL                 : 10
RIGHT_PARENTHESIS    : 6 7 34 36
SEMICOLON            : 2 3 6
STRING               : 33
TIMES                : 13
TRUE                 : 18
TUPLE_INDEXING       : 36
VARIABLE             : 4
error                : 

Nonterminals, with rules where they appear

comma_elements       : 30 32 34 36 37
expression           : 1 2 3 3 3 6 7 8 11 11 12 12 13 13 14 14 15 15 16 16 17 17 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30 35 35 36 37 38 38 39 39
statement            : 0
var                  : 2 5

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) expression -> . var EQUAL expression SEMICOLON
    (3) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
    (5) expression -> . var
    (6) expression -> . PRINT LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
    (7) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (8) expression -> . MINUS expression
    (9) expression -> . INTEGER
    (10) expression -> . REAL
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression NORMAL_DIVIDE expression
    (15) expression -> . expression INTEGER_DIVIDE expression
    (16) expression -> . expression MODULUS expression
    (17) expression -> . expression EXPONENT expression
    (18) expression -> . TRUE
    (19) expression -> . FALSE
    (20) expression -> . NEGATION expression
    (21) expression -> . expression CONJUNCTION expression
    (22) expression -> . expression DISJUNCTION expression
    (23) expression -> . expression LESS_THAN expression
    (24) expression -> . expression LESS_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression EQUAL_TO expression
    (27) expression -> . expression GREATER_THAN expression
    (28) expression -> . expression GREATER_EQUAL expression
    (31) expression -> . OPEN_INDEXING CLOSE_INDEXING
    (32) expression -> . OPEN_INDEXING comma_elements CLOSE_INDEXING
    (33) expression -> . STRING
    (34) expression -> . LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (35) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING
    (36) expression -> . TUPLE_INDEXING expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (37) expression -> . expression MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
    (38) expression -> . expression MEMBERSHIP expression
    (39) expression -> . expression CONS expression
    (4) var -> . VARIABLE

    PRINT           shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    MINUS           shift and go to state 7
    INTEGER         shift and go to state 8
    REAL            shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    NEGATION        shift and go to state 12
    OPEN_INDEXING   shift and go to state 4
    STRING          shift and go to state 13
    TUPLE_INDEXING  shift and go to state 14
    VARIABLE        shift and go to state 15

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    var                            shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .
    (3) expression -> expression . OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . NORMAL_DIVIDE expression
    (15) expression -> expression . INTEGER_DIVIDE expression
    (16) expression -> expression . MODULUS expression
    (17) expression -> expression . EXPONENT expression
    (21) expression -> expression . CONJUNCTION expression
    (22) expression -> expression . DISJUNCTION expression
    (23) expression -> expression . LESS_THAN expression
    (24) expression -> expression . LESS_EQUAL expression
    (25) expression -> expression . NOT_EQUAL expression
    (26) expression -> expression . EQUAL_TO expression
    (27) expression -> expression . GREATER_THAN expression
    (28) expression -> expression . GREATER_EQUAL expression
    (35) expression -> expression . OPEN_INDEXING expression CLOSE_INDEXING
    (37) expression -> expression . MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
    (38) expression -> expression . MEMBERSHIP expression
    (39) expression -> expression . CONS expression

    $end            reduce using rule 1 (statement -> expression .)
    OPEN_INDEXING   shift and go to state 16
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    NORMAL_DIVIDE   shift and go to state 20
    INTEGER_DIVIDE  shift and go to state 21
    MODULUS         shift and go to state 22
    EXPONENT        shift and go to state 23
    CONJUNCTION     shift and go to state 24
    DISJUNCTION     shift and go to state 25
    LESS_THAN       shift and go to state 26
    LESS_EQUAL      shift and go to state 27
    NOT_EQUAL       shift and go to state 28
    EQUAL_TO        shift and go to state 29
    GREATER_THAN    shift and go to state 30
    GREATER_EQUAL   shift and go to state 31
    MEMBERSHIP      shift and go to state 32
    CONS            shift and go to state 33


state 3

    (2) expression -> var . EQUAL expression SEMICOLON
    (5) expression -> var .

    EQUAL           shift and go to state 34
    OPEN_INDEXING   reduce using rule 5 (expression -> var .)
    PLUS            reduce using rule 5 (expression -> var .)
    MINUS           reduce using rule 5 (expression -> var .)
    TIMES           reduce using rule 5 (expression -> var .)
    NORMAL_DIVIDE   reduce using rule 5 (expression -> var .)
    INTEGER_DIVIDE  reduce using rule 5 (expression -> var .)
    MODULUS         reduce using rule 5 (expression -> var .)
    EXPONENT        reduce using rule 5 (expression -> var .)
    CONJUNCTION     reduce using rule 5 (expression -> var .)
    DISJUNCTION     reduce using rule 5 (expression -> var .)
    LESS_THAN       reduce using rule 5 (expression -> var .)
    LESS_EQUAL      reduce using rule 5 (expression -> var .)
    NOT_EQUAL       reduce using rule 5 (expression -> var .)
    EQUAL_TO        reduce using rule 5 (expression -> var .)
    GREATER_THAN    reduce using rule 5 (expression -> var .)
    GREATER_EQUAL   reduce using rule 5 (expression -> var .)
    MEMBERSHIP      reduce using rule 5 (expression -> var .)
    CONS            reduce using rule 5 (expression -> var .)
    $end            reduce using rule 5 (expression -> var .)
    COMMA           reduce using rule 5 (expression -> var .)
    CLOSE_INDEXING  reduce using rule 5 (expression -> var .)
    RIGHT_PARENTHESIS reduce using rule 5 (expression -> var .)
    LEFT_PARENTHESIS reduce using rule 5 (expression -> var .)
    SEMICOLON       reduce using rule 5 (expression -> var .)


state 4

    (31) expression -> OPEN_INDEXING . CLOSE_INDEXING
    (32) expression -> OPEN_INDEXING . comma_elements CLOSE_INDEXING
    (29) comma_elements -> . expression
    (30) comma_elements -> . expression COMMA comma_elements
    (2) expression -> . var EQUAL expression SEMICOLON
    (3) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
    (5) expression -> . var
    (6) expression -> . PRINT LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
    (7) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (8) expression -> . MINUS expression
    (9) expression -> . INTEGER
    (10) expression -> . REAL
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression NORMAL_DIVIDE expression
    (15) expression -> . expression INTEGER_DIVIDE expression
    (16) expression -> . expression MODULUS expression
    (17) expression -> . expression EXPONENT expression
    (18) expression -> . TRUE
    (19) expression -> . FALSE
    (20) expression -> . NEGATION expression
    (21) expression -> . expression CONJUNCTION expression
    (22) expression -> . expression DISJUNCTION expression
    (23) expression -> . expression LESS_THAN expression
    (24) expression -> . expression LESS_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression EQUAL_TO expression
    (27) expression -> . expression GREATER_THAN expression
    (28) expression -> . expression GREATER_EQUAL expression
    (31) expression -> . OPEN_INDEXING CLOSE_INDEXING
    (32) expression -> . OPEN_INDEXING comma_elements CLOSE_INDEXING
    (33) expression -> . STRING
    (34) expression -> . LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (35) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING
    (36) expression -> . TUPLE_INDEXING expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (37) expression -> . expression MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
    (38) expression -> . expression MEMBERSHIP expression
    (39) expression -> . expression CONS expression
    (4) var -> . VARIABLE

    CLOSE_INDEXING  shift and go to state 35
    PRINT           shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    MINUS           shift and go to state 7
    INTEGER         shift and go to state 8
    REAL            shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    NEGATION        shift and go to state 12
    OPEN_INDEXING   shift and go to state 4
    STRING          shift and go to state 13
    TUPLE_INDEXING  shift and go to state 14
    VARIABLE        shift and go to state 15

    comma_elements                 shift and go to state 36
    expression                     shift and go to state 37
    var                            shift and go to state 3

state 5

    (6) expression -> PRINT . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON

    LEFT_PARENTHESIS shift and go to state 38


state 6

    (7) expression -> LEFT_PARENTHESIS . expression RIGHT_PARENTHESIS
    (34) expression -> LEFT_PARENTHESIS . comma_elements RIGHT_PARENTHESIS
    (2) expression -> . var EQUAL expression SEMICOLON
    (3) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
    (5) expression -> . var
    (6) expression -> . PRINT LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
    (7) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (8) expression -> . MINUS expression
    (9) expression -> . INTEGER
    (10) expression -> . REAL
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression NORMAL_DIVIDE expression
    (15) expression -> . expression INTEGER_DIVIDE expression
    (16) expression -> . expression MODULUS expression
    (17) expression -> . expression EXPONENT expression
    (18) expression -> . TRUE
    (19) expression -> . FALSE
    (20) expression -> . NEGATION expression
    (21) expression -> . expression CONJUNCTION expression
    (22) expression -> . expression DISJUNCTION expression
    (23) expression -> . expression LESS_THAN expression
    (24) expression -> . expression LESS_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression EQUAL_TO expression
    (27) expression -> . expression GREATER_THAN expression
    (28) expression -> . expression GREATER_EQUAL expression
    (31) expression -> . OPEN_INDEXING CLOSE_INDEXING
    (32) expression -> . OPEN_INDEXING comma_elements CLOSE_INDEXING
    (33) expression -> . STRING
    (34) expression -> . LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (35) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING
    (36) expression -> . TUPLE_INDEXING expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (37) expression -> . expression MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
    (38) expression -> . expression MEMBERSHIP expression
    (39) expression -> . expression CONS expression
    (29) comma_elements -> . expression
    (30) comma_elements -> . expression COMMA comma_elements
    (4) var -> . VARIABLE

    PRINT           shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    MINUS           shift and go to state 7
    INTEGER         shift and go to state 8
    REAL            shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    NEGATION        shift and go to state 12
    OPEN_INDEXING   shift and go to state 4
    STRING          shift and go to state 13
    TUPLE_INDEXING  shift and go to state 14
    VARIABLE        shift and go to state 15

    expression                     shift and go to state 39
    comma_elements                 shift and go to state 40
    var                            shift and go to state 3

state 7

    (8) expression -> MINUS . expression
    (2) expression -> . var EQUAL expression SEMICOLON
    (3) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
    (5) expression -> . var
    (6) expression -> . PRINT LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
    (7) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (8) expression -> . MINUS expression
    (9) expression -> . INTEGER
    (10) expression -> . REAL
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression NORMAL_DIVIDE expression
    (15) expression -> . expression INTEGER_DIVIDE expression
    (16) expression -> . expression MODULUS expression
    (17) expression -> . expression EXPONENT expression
    (18) expression -> . TRUE
    (19) expression -> . FALSE
    (20) expression -> . NEGATION expression
    (21) expression -> . expression CONJUNCTION expression
    (22) expression -> . expression DISJUNCTION expression
    (23) expression -> . expression LESS_THAN expression
    (24) expression -> . expression LESS_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression EQUAL_TO expression
    (27) expression -> . expression GREATER_THAN expression
    (28) expression -> . expression GREATER_EQUAL expression
    (31) expression -> . OPEN_INDEXING CLOSE_INDEXING
    (32) expression -> . OPEN_INDEXING comma_elements CLOSE_INDEXING
    (33) expression -> . STRING
    (34) expression -> . LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (35) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING
    (36) expression -> . TUPLE_INDEXING expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (37) expression -> . expression MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
    (38) expression -> . expression MEMBERSHIP expression
    (39) expression -> . expression CONS expression
    (4) var -> . VARIABLE

    PRINT           shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    MINUS           shift and go to state 7
    INTEGER         shift and go to state 8
    REAL            shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    NEGATION        shift and go to state 12
    OPEN_INDEXING   shift and go to state 4
    STRING          shift and go to state 13
    TUPLE_INDEXING  shift and go to state 14
    VARIABLE        shift and go to state 15

    expression                     shift and go to state 41
    var                            shift and go to state 3

state 8

    (9) expression -> INTEGER .

    OPEN_INDEXING   reduce using rule 9 (expression -> INTEGER .)
    PLUS            reduce using rule 9 (expression -> INTEGER .)
    MINUS           reduce using rule 9 (expression -> INTEGER .)
    TIMES           reduce using rule 9 (expression -> INTEGER .)
    NORMAL_DIVIDE   reduce using rule 9 (expression -> INTEGER .)
    INTEGER_DIVIDE  reduce using rule 9 (expression -> INTEGER .)
    MODULUS         reduce using rule 9 (expression -> INTEGER .)
    EXPONENT        reduce using rule 9 (expression -> INTEGER .)
    CONJUNCTION     reduce using rule 9 (expression -> INTEGER .)
    DISJUNCTION     reduce using rule 9 (expression -> INTEGER .)
    LESS_THAN       reduce using rule 9 (expression -> INTEGER .)
    LESS_EQUAL      reduce using rule 9 (expression -> INTEGER .)
    NOT_EQUAL       reduce using rule 9 (expression -> INTEGER .)
    EQUAL_TO        reduce using rule 9 (expression -> INTEGER .)
    GREATER_THAN    reduce using rule 9 (expression -> INTEGER .)
    GREATER_EQUAL   reduce using rule 9 (expression -> INTEGER .)
    MEMBERSHIP      reduce using rule 9 (expression -> INTEGER .)
    CONS            reduce using rule 9 (expression -> INTEGER .)
    $end            reduce using rule 9 (expression -> INTEGER .)
    COMMA           reduce using rule 9 (expression -> INTEGER .)
    CLOSE_INDEXING  reduce using rule 9 (expression -> INTEGER .)
    RIGHT_PARENTHESIS reduce using rule 9 (expression -> INTEGER .)
    LEFT_PARENTHESIS reduce using rule 9 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 9 (expression -> INTEGER .)


state 9

    (10) expression -> REAL .

    OPEN_INDEXING   reduce using rule 10 (expression -> REAL .)
    PLUS            reduce using rule 10 (expression -> REAL .)
    MINUS           reduce using rule 10 (expression -> REAL .)
    TIMES           reduce using rule 10 (expression -> REAL .)
    NORMAL_DIVIDE   reduce using rule 10 (expression -> REAL .)
    INTEGER_DIVIDE  reduce using rule 10 (expression -> REAL .)
    MODULUS         reduce using rule 10 (expression -> REAL .)
    EXPONENT        reduce using rule 10 (expression -> REAL .)
    CONJUNCTION     reduce using rule 10 (expression -> REAL .)
    DISJUNCTION     reduce using rule 10 (expression -> REAL .)
    LESS_THAN       reduce using rule 10 (expression -> REAL .)
    LESS_EQUAL      reduce using rule 10 (expression -> REAL .)
    NOT_EQUAL       reduce using rule 10 (expression -> REAL .)
    EQUAL_TO        reduce using rule 10 (expression -> REAL .)
    GREATER_THAN    reduce using rule 10 (expression -> REAL .)
    GREATER_EQUAL   reduce using rule 10 (expression -> REAL .)
    MEMBERSHIP      reduce using rule 10 (expression -> REAL .)
    CONS            reduce using rule 10 (expression -> REAL .)
    $end            reduce using rule 10 (expression -> REAL .)
    COMMA           reduce using rule 10 (expression -> REAL .)
    CLOSE_INDEXING  reduce using rule 10 (expression -> REAL .)
    RIGHT_PARENTHESIS reduce using rule 10 (expression -> REAL .)
    LEFT_PARENTHESIS reduce using rule 10 (expression -> REAL .)
    SEMICOLON       reduce using rule 10 (expression -> REAL .)


state 10

    (18) expression -> TRUE .

    OPEN_INDEXING   reduce using rule 18 (expression -> TRUE .)
    PLUS            reduce using rule 18 (expression -> TRUE .)
    MINUS           reduce using rule 18 (expression -> TRUE .)
    TIMES           reduce using rule 18 (expression -> TRUE .)
    NORMAL_DIVIDE   reduce using rule 18 (expression -> TRUE .)
    INTEGER_DIVIDE  reduce using rule 18 (expression -> TRUE .)
    MODULUS         reduce using rule 18 (expression -> TRUE .)
    EXPONENT        reduce using rule 18 (expression -> TRUE .)
    CONJUNCTION     reduce using rule 18 (expression -> TRUE .)
    DISJUNCTION     reduce using rule 18 (expression -> TRUE .)
    LESS_THAN       reduce using rule 18 (expression -> TRUE .)
    LESS_EQUAL      reduce using rule 18 (expression -> TRUE .)
    NOT_EQUAL       reduce using rule 18 (expression -> TRUE .)
    EQUAL_TO        reduce using rule 18 (expression -> TRUE .)
    GREATER_THAN    reduce using rule 18 (expression -> TRUE .)
    GREATER_EQUAL   reduce using rule 18 (expression -> TRUE .)
    MEMBERSHIP      reduce using rule 18 (expression -> TRUE .)
    CONS            reduce using rule 18 (expression -> TRUE .)
    $end            reduce using rule 18 (expression -> TRUE .)
    COMMA           reduce using rule 18 (expression -> TRUE .)
    CLOSE_INDEXING  reduce using rule 18 (expression -> TRUE .)
    RIGHT_PARENTHESIS reduce using rule 18 (expression -> TRUE .)
    LEFT_PARENTHESIS reduce using rule 18 (expression -> TRUE .)
    SEMICOLON       reduce using rule 18 (expression -> TRUE .)


state 11

    (19) expression -> FALSE .

    OPEN_INDEXING   reduce using rule 19 (expression -> FALSE .)
    PLUS            reduce using rule 19 (expression -> FALSE .)
    MINUS           reduce using rule 19 (expression -> FALSE .)
    TIMES           reduce using rule 19 (expression -> FALSE .)
    NORMAL_DIVIDE   reduce using rule 19 (expression -> FALSE .)
    INTEGER_DIVIDE  reduce using rule 19 (expression -> FALSE .)
    MODULUS         reduce using rule 19 (expression -> FALSE .)
    EXPONENT        reduce using rule 19 (expression -> FALSE .)
    CONJUNCTION     reduce using rule 19 (expression -> FALSE .)
    DISJUNCTION     reduce using rule 19 (expression -> FALSE .)
    LESS_THAN       reduce using rule 19 (expression -> FALSE .)
    LESS_EQUAL      reduce using rule 19 (expression -> FALSE .)
    NOT_EQUAL       reduce using rule 19 (expression -> FALSE .)
    EQUAL_TO        reduce using rule 19 (expression -> FALSE .)
    GREATER_THAN    reduce using rule 19 (expression -> FALSE .)
    GREATER_EQUAL   reduce using rule 19 (expression -> FALSE .)
    MEMBERSHIP      reduce using rule 19 (expression -> FALSE .)
    CONS            reduce using rule 19 (expression -> FALSE .)
    $end            reduce using rule 19 (expression -> FALSE .)
    COMMA           reduce using rule 19 (expression -> FALSE .)
    CLOSE_INDEXING  reduce using rule 19 (expression -> FALSE .)
    RIGHT_PARENTHESIS reduce using rule 19 (expression -> FALSE .)
    LEFT_PARENTHESIS reduce using rule 19 (expression -> FALSE .)
    SEMICOLON       reduce using rule 19 (expression -> FALSE .)


state 12

    (20) expression -> NEGATION . expression
    (2) expression -> . var EQUAL expression SEMICOLON
    (3) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
    (5) expression -> . var
    (6) expression -> . PRINT LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
    (7) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (8) expression -> . MINUS expression
    (9) expression -> . INTEGER
    (10) expression -> . REAL
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression NORMAL_DIVIDE expression
    (15) expression -> . expression INTEGER_DIVIDE expression
    (16) expression -> . expression MODULUS expression
    (17) expression -> . expression EXPONENT expression
    (18) expression -> . TRUE
    (19) expression -> . FALSE
    (20) expression -> . NEGATION expression
    (21) expression -> . expression CONJUNCTION expression
    (22) expression -> . expression DISJUNCTION expression
    (23) expression -> . expression LESS_THAN expression
    (24) expression -> . expression LESS_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression EQUAL_TO expression
    (27) expression -> . expression GREATER_THAN expression
    (28) expression -> . expression GREATER_EQUAL expression
    (31) expression -> . OPEN_INDEXING CLOSE_INDEXING
    (32) expression -> . OPEN_INDEXING comma_elements CLOSE_INDEXING
    (33) expression -> . STRING
    (34) expression -> . LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (35) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING
    (36) expression -> . TUPLE_INDEXING expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (37) expression -> . expression MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
    (38) expression -> . expression MEMBERSHIP expression
    (39) expression -> . expression CONS expression
    (4) var -> . VARIABLE

    PRINT           shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    MINUS           shift and go to state 7
    INTEGER         shift and go to state 8
    REAL            shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    NEGATION        shift and go to state 12
    OPEN_INDEXING   shift and go to state 4
    STRING          shift and go to state 13
    TUPLE_INDEXING  shift and go to state 14
    VARIABLE        shift and go to state 15

    expression                     shift and go to state 42
    var                            shift and go to state 3

state 13

    (33) expression -> STRING .

    OPEN_INDEXING   reduce using rule 33 (expression -> STRING .)
    PLUS            reduce using rule 33 (expression -> STRING .)
    MINUS           reduce using rule 33 (expression -> STRING .)
    TIMES           reduce using rule 33 (expression -> STRING .)
    NORMAL_DIVIDE   reduce using rule 33 (expression -> STRING .)
    INTEGER_DIVIDE  reduce using rule 33 (expression -> STRING .)
    MODULUS         reduce using rule 33 (expression -> STRING .)
    EXPONENT        reduce using rule 33 (expression -> STRING .)
    CONJUNCTION     reduce using rule 33 (expression -> STRING .)
    DISJUNCTION     reduce using rule 33 (expression -> STRING .)
    LESS_THAN       reduce using rule 33 (expression -> STRING .)
    LESS_EQUAL      reduce using rule 33 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 33 (expression -> STRING .)
    EQUAL_TO        reduce using rule 33 (expression -> STRING .)
    GREATER_THAN    reduce using rule 33 (expression -> STRING .)
    GREATER_EQUAL   reduce using rule 33 (expression -> STRING .)
    MEMBERSHIP      reduce using rule 33 (expression -> STRING .)
    CONS            reduce using rule 33 (expression -> STRING .)
    $end            reduce using rule 33 (expression -> STRING .)
    COMMA           reduce using rule 33 (expression -> STRING .)
    CLOSE_INDEXING  reduce using rule 33 (expression -> STRING .)
    RIGHT_PARENTHESIS reduce using rule 33 (expression -> STRING .)
    LEFT_PARENTHESIS reduce using rule 33 (expression -> STRING .)
    SEMICOLON       reduce using rule 33 (expression -> STRING .)


state 14

    (36) expression -> TUPLE_INDEXING . expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (2) expression -> . var EQUAL expression SEMICOLON
    (3) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING EQUAL expression SEMICOLON
    (5) expression -> . var
    (6) expression -> . PRINT LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
    (7) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (8) expression -> . MINUS expression
    (9) expression -> . INTEGER
    (10) expression -> . REAL
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression NORMAL_DIVIDE expression
    (15) expression -> . expression INTEGER_DIVIDE expression
    (16) expression -> . expression MODULUS expression
    (17) expression -> . expression EXPONENT expression
    (18) expression -> . TRUE
    (19) expression -> . FALSE
    (20) expression -> . NEGATION expression
    (21) expression -> . expression CONJUNCTION expression
    (22) expression -> . expression DISJUNCTION expression
    (23) expression -> . expression LESS_THAN expression
    (24) expression -> . expression LESS_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression EQUAL_TO expression
    (27) expression -> . expression GREATER_THAN expression
    (28) expression -> . expression GREATER_EQUAL expression
    (31) expression -> . OPEN_INDEXING CLOSE_INDEXING
    (32) expression -> . OPEN_INDEXING comma_elements CLOSE_INDEXING
    (33) expression -> . STRING
    (34) expression -> . LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (35) expression -> . expression OPEN_INDEXING expression CLOSE_INDEXING
    (36) expression -> . TUPLE_INDEXING expression LEFT_PARENTHESIS comma_elements RIGHT_PARENTHESIS
    (37) expression -> . expression MEMBERSHIP OPEN_INDEXING comma_elements CLOSE_INDEXING
    (38) expression -> . expression MEMBERSHIP expression
    (39) expression -> . expression CONS expression
    (4) var -> . VARIABLE

    PRINT           shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    MINUS           shift and go to state 7
    INTEGER         shift and go to state 8
    REAL            shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    NEGATION        shift and go to state 12
    OPEN_INDEXING   shift and go to state 4
    STRING          shift and go to state 13
    TUPLE_INDEXING  shift and go to state 14
    VARIABLE        shift and go to state 15

    expression                     shift and go to state 43
    var                            shift and go to state 3

state 15

    (4) var -> VARIABLE .
